# AdventOfCode

./: .gitignore  README.md
1/: calorielist.cpp  calorielist.h
1/task1/: .gitignore  caloriegenerator.cpp  caloriegenerator.h  calorielist.h  elves.cpp  elves.h  functions.cpp  functions.h  main.cpp  task1.pro  types.h
2/: CMakeLists.txt  main.cpp  rockpaperscissorgenerator.cpp  rockpaperscissorgenerator.h
2022/1/: calorielist.cpp  main.cpp
2022/2/: calculateFunctions.h  main.cpp  rockpaperscissorgenerator.cpp
2022/3/: CMakeLists.txt
2022/4/: CMakeLists.txt
2022/5/: CMakeLists.txt  main.cpp
2023/: test.txt
2023/AOC1/: CMakeLists.txt  main.cpp
2023/AOC2/: CMakeLists.txt  main.cpp
2023/AOC3/: CMakeLists.txt  main.cpp  numberstartstop.cpp  numberstartstop.h  symbolstartstop.cpp  symbolstartstop.h
2023/AOC4/: CMakeLists.txt  main.cpp
2024/AOC1/: AOC1.cpp
2024/AOC3/: AOC3.cpp
2024/AOC4/: AOC4.cpp
2024/AOC5/: AOC5.cpp
2024/AOC6/: AOC6.cpp
2024/AOC7/: AOC7.cpp
3/: main.cpp
4/: main.cpp
